--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^1.0.0",
     "@aws-sdk/client-s3": "^3.350.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "autoprefixer": "10.4.14",
@@ -16,11 +17,11 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "mime-types": "^2.1.35",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.2.2",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1",
     "multiparty": "^4.2.3",
     "next": "13.4.4",
-    "next-auth": "^4.22.1",
+    "next-auth": "^4.22.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
